# eval_research

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/: eval_results.json  optimization_findings.txt
artifacts/evals/: 20260722T221554Z_baseline_gpt-5.6-luna.json  20260722T221729Z_baseline_gpt-5.6-terra.json  20260722T222214Z_baseline_gpt-5.6-sol.json  20260723T203613Z_baseline_gpt-5.4-mini.json  20260723T204932Z_baseline_gpt-5.6-luna.json  20260723T210111Z_baseline_gpt-5.6-terra.json  20260723T215116Z_optimize_baseline_gpt-5.6-luna.json  20260723T220250Z_optimize_after_gpt-5.6-luna.json
artifacts/programs/: 20260723T220058Z_mipro-light_gpt-5.6-luna.json
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  api.ts  format.ts  index.css  types.ts
src/react_hover/: __init__.py  __main__.py  agent.py  api.py  data.py  env.py  eval_runner.py  history.py  jobs.py  lm.py  lm_trace.py  logging_config.py  metric.py  opt_runner.py  run.py  tools.py
