[project]
name = "dspy-react-eval"
version = "0.1.0"
description = "Official DSPy multi-hop ReAct evaluation + MIPROv2 optimization (HoVer)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "dspy>=3.2.1",
    "fastapi>=0.139.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
    "wikipedia>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/react_hover"]

[tool.uv]
package = true
